Sort order when listing, fix final trivy error in release pipeline & updated everything to latest version to keep Dependabot happy (#11)
* Added sorting to the list keys endpoint

* Hopefully fix the last error in the release pipeline

* Updated everything to latest version to keep dependabot happy

* Adding some more coverage and moving the target now to Above 30%

* linter issue
